--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2516,7 +2516,16 @@ input, select, textarea {
 		}
 
 		.icon.brands:before {
+			font-size:1.2rem;
 			font-family: 'Font Awesome 5 Brands';
+			width: 2.5rem;
+			height: 2.5rem;
+			color:#ffffff;
+			background-color: #5052b5;
+			border-radius: 100%;
+			text-align: center;
+			line-height: 2.5em;
+			margin: 0 0 1.3em 0;
 		}
 
 		.icon.major {
@@ -3527,7 +3536,7 @@ input, select, textarea {
 
 	#sidebar {
 		padding: 2.5em 2.5em 0.5em 2.5em ;
-		background-color: #ffffff50;
+		background-color: #ffffff85;
 		cursor: default;
 		height: 100vh;
 		left: 0;
