--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,6 +22,7 @@ section, summary, time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font-family: 'Quicksand', sans-serif;
+	font-weight: 300;
 	vertical-align: baseline;}
 
 article, aside, details, figcaption, figure,
@@ -172,6 +173,7 @@ input, select, textarea {
 
 	p {
 		margin: 0 0 2em 0;
+		color: grey;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
@@ -188,6 +190,7 @@ input, select, textarea {
 
 	h1 {
 		font-size: 2.75em;
+		color: #5e42a6;
 	}
 
 		h1.major {
@@ -3251,7 +3254,7 @@ input, select, textarea {
 
 		.wrapper.style1 {
 			background-image: url("images/background.jpg");
-			background-color: #c9beb7;
+			background-color: #ffffff;
 			opacity: 90;
 			;
 		}
