--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -218,7 +218,7 @@ input, select, textarea {
 	}
 
 	h3 {
-		font-size: 0.8em;
+		font-size: 0.7em;
 		margin-top: 1em;
 	}
 
@@ -2734,7 +2734,7 @@ input, select, textarea {
 			}
 
 			.tiles article.style6 > .image:before {
-				background-color: #000000;
+				background-color: rgb(217, 131, 145);
 			}
 
 			body:not(.is-touch) .tiles article:hover > .image {
