--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -148,7 +148,7 @@ input, select, textarea {
 		transition: border-bottom-color 0.2s ease, color 0.2s ease;
 		text-decoration: none;
 		color: #585858;
-		border-bottom: dotted 1px rgba(88, 88, 88, 0.5);
+
 	}
 
 		a:hover {
@@ -173,6 +173,11 @@ input, select, textarea {
 		font-weight: 300;
 		line-height: 1.3;
 		color:	#F37021;
+	}
+
+	h1 > a {
+		color: #F37021;
+		text-decoration: none;
 	}
 
 
@@ -201,12 +206,20 @@ input, select, textarea {
 
 		}
 
-	h2, h3, h4, h5, h6 {
+	h2, h4, h5, h6 {
 		font-weight: 900;
 		line-height: 1.5;
 		margin: 0 0 2em 0;
 		text-transform: uppercase;
 		letter-spacing: 0.35em;
+	}
+
+	h3 {
+		font-weight: 900;
+		line-height: 1.5;
+		margin: 0 0 2em 0;
+		letter-spacing: 0.3em;
+
 	}
 
 		h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -2714,27 +2727,49 @@ input, select, textarea {
 					}
 
 			.tiles article.style1 > .image:before {
-				background-color: #000000;
+				background-color: #ffffff;
 			}
 
 			.tiles article.style2 > .image:before {
-				background-color: #000000;
+				background-color: #ffffff;
 			}
 
+			.tiles article.style1 > a {
+				color:#000000;
+			}
+			.tiles article.style2 > a {
+				color:#000000;
+			}
 			.tiles article.style3 > .image:before {
 				background-color: #F37021;
 			}
 
 			.tiles article.style4 > .image:before {
-				background-color: #000000;
+				background-color: #05bbb2;
 			}
 
 			.tiles article.style5 > .image:before {
-				background-color: #000000;
+				background-color: #05bbb2;
 			}
 
 			.tiles article.style6 > .image:before {
 				background-color: rgb(217, 131, 145);
+			}
+
+			.tiles article.style7 > .image:before {
+				background-color: rgb(238, 252, 255);
+			}
+
+			.tiles article.style7 > a {
+				color:#000000;
+			}
+
+			.tiles article.style8 > .image:before {
+				background-color: rgb(252, 238, 255);
+			}
+
+			.tiles article.style8 > a {
+				color:#000000;
 			}
 
 			body:not(.is-touch) .tiles article:hover > .image {
