--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -227,11 +227,11 @@ input, select, textarea {
 		}
 
 	h2 {
-		font-size: 0.9em;
+		font-size: 0.75em;
 	}
 
 	h3 {
-		font-size: 0.7em;
+		font-size: 0.65em;
 		margin-top: 1em;
 	}
 
@@ -2603,7 +2603,7 @@ input, select, textarea {
 			-ms-transition: -ms-transform 0.5s ease, opacity 0.5s ease;
 			transition: transform 0.5s ease, opacity 0.5s ease;
 			position: relative;
-			width: calc(20% - 2.5em);
+			width: calc(25% - 2.5em);
 			margin: 2.5em 0 0 2.5em;
 		}
 
@@ -2615,13 +2615,15 @@ input, select, textarea {
 				position: relative;
 				display: block;
 				width: 100%;
+				height: 100%;
 				border-radius: 4px;
 				overflow: hidden;
 			}
 
 				.tiles article > .image img {
-					display: block;
+					display:flex;
 					width: 100%;
+					height: 100%;
 				}
 
 				.tiles article > .image:before {
@@ -2631,7 +2633,7 @@ input, select, textarea {
 					-ms-transition: background-color 0.5s ease, opacity 0.5s ease;
 					transition: background-color 0.5s ease, opacity 0.5s ease;
 					content: '';
-					display: block;
+					display: flex;
 					position: absolute;
 					top: 0;
 					left: 0;
@@ -2727,7 +2729,7 @@ input, select, textarea {
 					}
 
 			.tiles article.style1 > .image:before {
-				background-color: #ffffff;
+				background-color:ghostwhite;
 			}
 
 			.tiles article.style2 > .image:before {
@@ -2780,8 +2782,8 @@ input, select, textarea {
 			}
 
 				body:not(.is-touch) .tiles article:hover > .image:before {
-					background-color: #333333;
-					opacity: 0.35;
+					background-color: #868585;
+					opacity: 0.85;
 				}
 
 				body:not(.is-touch) .tiles article:hover > .image:after {
@@ -2872,7 +2874,7 @@ input, select, textarea {
 /* Header */
 
 	#header {
-		padding: 5em 2em 5em 2em ;
+		padding: 3em 2em 3em 2em ;
 	}
 
 		#header nav {
@@ -3120,7 +3122,7 @@ input, select, textarea {
 /* Main */
 
 	#main {
-		padding: 0em 0 6em 0 ;
+		padding: 2em 2em 2em 2em ;
 	}
 
 		@media screen and (max-width: 736px) {
@@ -3134,7 +3136,7 @@ input, select, textarea {
 /* Footer */
 
 	#footer {
-		padding: 5em 0 6em 0 ;
+		padding: 5em 2em 6em 2em ;
 		background-color: #f6f6f6;
 	}
 
