--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -166,7 +166,7 @@ input, select, textarea {
 
 	p {
 		margin: 0 0 2em 0;
-		font-size: 1.2em;
+		font-size: 0.8em;
 	}
 
 	h1 {
@@ -228,11 +228,11 @@ input, select, textarea {
 		}
 
 	h2 {
-		font-size: 1.2em;
+		font-size: 1em;
 	}
 
 	h3 {
-		font-size: 1em;
+		font-size: 0.8em;
 		margin-top: 1em;
 	}
 
@@ -2748,11 +2748,11 @@ input, select, textarea {
 			}
 
 			.tiles article.style4 > .image:before {
-				background-color: #05bbb2;
+				background-color: #856dab;
 			}
 
 			.tiles article.style5 > .image:before {
-				background-color: #05bbb2;
+				background-color: #856dab;
 			}
 
 			.tiles article.style6 > .image:before {
