edited pages for JS projectss

--- a/assets/about-css/main.css
+++ b/assets/about-css/main.css
@@ -3690,3 +3690,11 @@ input, select, textarea {
 			}
 
 	}
+
+	.data {
+		position:absolute;
+		align-items:left;
+		top: 20%;
+		background-color: #ffe9ec70;
+		width:500px;
+	  }
